--- a/Snake/Views/MainWindow.xaml
+++ b/Snake/Views/MainWindow.xaml
@@ -18,11 +18,12 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="505">
-            <TextBlock Margin="5,5,0,5" Text="{Binding Score, StringFormat=Счет: {0}/}" FontSize="30" FontWeight="Bold" Foreground="White"/>
-            <TextBlock Margin="0,5,5,5" Text="{Binding NeedFood}" FontSize="30" FontWeight="Bold" Foreground="White"/>
-            <Button Margin="300,5,5,5" Padding="15,0" Command="{Binding StartCommand}" Content="Начать"/>
-        </StackPanel>
+        <Border HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Margin="5,5,0,5" Text="{Binding Score, StringFormat=Счет: {0}/}" FontSize="30" FontWeight="Bold" Foreground="White"/>
+                <TextBlock Margin="0,5,5,5" Text="{Binding NeedFood}" FontSize="30" FontWeight="Bold" Foreground="White"/>
+            </StackPanel>
+        </Border>
         <ItemsControl Grid.Row="1" Background="#FF402279" Margin="5" ItemsSource="{Binding Field}" HorizontalAlignment="Center" VerticalAlignment="Center">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
@@ -76,7 +77,7 @@
                 <TextBlock Margin="20,10" FontSize="30" FontWeight="Bold">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
-                            <Setter Property="Text" Value=""/>
+                            <Setter Property="Text" Value="Нажмите Пробел чтобы начать игру"/>
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding GameOver}" Value="True">
                                     <Setter Property="Text" Value="ВЫ ПРОИГРАЛИ"/>
