--- a/Snake/Views/MainWindow.xaml
+++ b/Snake/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake" xmlns:viewmodel="clr-namespace:Snake.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
-        Title="Змейка" Height="450" Width="800" Background="#FF1B0A2F">
+        Title="Змейка" Height="450" Width="800" Background="#FF1B0A2F" SizeToContent="Height" WindowStartupLocation="CenterScreen" Icon="/Views/icon.png">
     <Window.InputBindings>
         <KeyBinding Key="Right" Command="{Binding MoveCommand}" CommandParameter="Right"/>
         <KeyBinding Key="Down" Command="{Binding MoveCommand}" CommandParameter="Down"/>
