--- a/Snake/Views/Menu.xaml
+++ b/Snake/Views/Menu.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Snake.Views"
         mc:Ignorable="d"
-        Title="Menu" Height="450" Width="800" Background="#FF1B0A2F" Icon="/Views/icon.png">
+        Title="Menu" Height="450" Width="800" Background="#FF1B0A2F" Icon="/Views/icon.png" WindowStartupLocation="CenterScreen">
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
         <Button Content="Начать" HorizontalAlignment="Center" VerticalAlignment="Top" Click="ButtonStart_Click" Height="46" Width="140" Background="#FF471286" Foreground="White" Margin="0,217,0,0" FontSize="20"/>
         <Button Content="Выход" HorizontalAlignment="Center" Margin="0,282,0,0" VerticalAlignment="Top" Click="ButtonExit_Click" Height="46" Width="140" Background="#FF471286" Foreground="White" FontSize="20"/>
